--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">HexVault</string>
+    <string name="seed_title">Your seed (store offline):</string>
+    <string name="seed_saved_cta">I have saved the seed</string>
+    <string name="btc_usd">BTC/USD: %1$s</string>
+    <string name="refresh_price">Refresh price</string>
+    <string name="settings">Settings</string>
+    <string name="language">Language</string>
+    <string name="lang_en">English</string>
+    <string name="lang_uk">Ukrainian</string>
+    <string name="lang_pl">Polish</string>
+    <string name="go_back">Back</string>
 </resources>
