--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -11,5 +11,8 @@
     <string name="lang_uk">Українська</string>
     <string name="lang_pl">Польська</string>
     <string name="go_back">Назад</string>
+    <string name="your_address">Ваша BTC testnet-адреса:</string>
+    <string name="copy">Копіювати</string>
+    <string name="copied">Скопійовано</string>
 </resources>
 
