--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="refresh_price">Refresh price</string>
     <string name="settings">Settings</string>
     <string name="language">Language</string>
+    <string name="your_address">Your BTC testnet address:</string>
+    <string name="copy">Copy</string>
+    <string name="copied">Copied</string>
     <string name="lang_en">English</string>
     <string name="lang_uk">Ukrainian</string>
     <string name="lang_pl">Polish</string>
